# roxi

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml
Learnrust/: Cargo.toml
Learnrust/src/: main.rs
ParserTest/: Cargo.toml
ParserTest/src/: csv.pest  main.rs
docs/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js  index.html
examples/: abox.ttl  abox2.ttl  rules.n3  rules2.n3
examples/deeptaxomy/: abox.ttl  rdfs-subClassOf.n3  test-dl-100.n3
examples/rsp/: location_update_stream.nt
js/: Cargo.toml  package-lock.json
js/src/: lib.rs
js/web/: bootstrap.js  index.html  index.js  package-lock.json  package.json
js/web/src/: index.js  temp.html
js/web/src/tabs/: reasoning.js  reasoningAndQuery.js  rsp.js
js_minimal/: flamegraph.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json
lib/: Cargo.toml
lib/benches/: bench.rs  hierarchies.rs
lib/evaluation/: eval.txt
lib/src/: backwardchaining.rs  bindings.rs  csprite.rs  dred.rs  encoding.rs  imars_reasoner.rs  imars_triple.rs  imars_window.rs  lib.rs  n3_parser.rs  observer.rs  parser.rs  pipeline.rs  reasoner.rs  reasoningstore.rs  rsp.rs  ruleindex.rs  service_composition.rs  sparql.rs  time_window.rs  tripleindex.rs  triples.rs  utils.rs
lib/src/parser/: n3.pest  n3rule_parser.rs
lib/src/parsing/: n3.pest
lib/src/reasoningstore/: binding.rs  ruleindex.rs
lib/src/rsp/: r2r.rs  r2s.rs  s2r.rs
lib_old/: Cargo.toml
lib_old/src/: reasoningstore.rs
lib_old/src/reasoningstore/: binding.rs  rule.rs  triple.rs
minimal/: Cargo.toml
minimal/benches/: bench.rs
minimal/evaluation/: Untitled.ipynb
minimal/src/: backwardchaining.rs  bindings.rs  csprite.rs  dred.rs  encoding.rs  imars.rs  imars_reasoner.rs  imars_triple.rs  lib.rs  parser.rs  pipeline.rs  queryengine.rs  reasoner.rs  rsp.rs  ruleindex.rs  sparql.rs  time_window.rs  tripleindex.rs  triples.rs  utils.rs
minimal/src/parser/: n3.pest  n3rule_parser.rs
minimal/src/rsp/: r2s.rs  s2r.rs  windowing.rs
minimal_js/: Cargo.toml
minimal_js/src/: lib.rs
minimal_js/www/: index.js  package-lock.json  package.json
scripts/: buildWebsiteDocs.sh
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  main_old1.1  main_old2.rs  n3_parser.rs  reasoningstore.rs
src/reasoningstore/: binding.rs  rule.rs  ruleindex.rs  triple.rs
