[package]
name = "roxi"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxigraph = "0.3.2"
datafrog = "2.0.1"
rio_turtle = "0.7.1"
rio_api = "0.7.1"
clap = { version = "3.1.8", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
