[package]
name = "minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
deepmesa = "0.9.0"
bencher = "0.1.5"
log = { version = "0.4"}
env_logger = "0.9.0"


[[bench]]
name = "bench"
harness = false